<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00154f"
    tools:context=".Fragment1">

    <TextView
        android:id="@+id/txt_plan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:fontFamily="@font/archivo_black"
        android:text="@string/choose_your_goals"
        android:textAlignment="center"
        android:textColor="#f4af1b"
        android:textSize="34sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardWeight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="#f4af1b"
        app:cardCornerRadius="18dp"
        app:cardElevation="12dp"
        app:cardUseCompatPadding="true">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
            <TableRow>
                <TextView
                    android:id="@+id/txtcurrweight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/currentWeight"
                    android:text="@string/current_weight"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="#00154f"
                    android:textSize="24sp" />
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/currentWeight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginHorizontal="50dp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:layout_margin="25dp"
                    android:textColor="#f4af1b"
                    app:backgroundTint="@null"
                    android:background="@drawable/update_button" >
                </Button>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/txttargetweight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:labelFor="@+id/Progress"
                    android:text="@string/check_your_progress"
                    android:textAlignment="center"
                    android:textColor="#00154f"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/Progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progress"
                    android:layout_weight="1"
                    android:layout_margin="25dp"
                    android:textColor="#f4af1b"
                    app:backgroundTint="@null"
                    android:background="@drawable/update_button"></Button>
            </TableRow>
        </TableLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCalories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="#f4af1b"
        app:cardCornerRadius="18dp"
        app:cardElevation="12dp"
        app:cardUseCompatPadding="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtIntake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calorie_intake"
                android:textAlignment="center"
                android:textColor="#00154f"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/txtWeight"
                app:layout_constraintTop_toBottomOf="@+id/txtIntake" />

            <TextView
                android:id="@+id/txtWeight"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:labelFor="@id/weight"
                android:text="@string/Weight"
                android:textColor="#00154f"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtIntake" />

            <TextView
                android:id="@+id/txtHeight"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:labelFor="@id/height"
                android:text="@string/height_cm"
                android:textColor="#00154f"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@+id/weight"
                app:layout_constraintTop_toBottomOf="@+id/txtIntake" />

            <EditText
                android:id="@+id/height"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/txtHeight"
                app:layout_constraintTop_toBottomOf="@+id/txtIntake" />

            <EditText
                android:id="@+id/age"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/txtAge"
                app:layout_constraintTop_toBottomOf="@+id/txtIntake" />

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="64dp"
                android:labelFor="@id/age"
                android:text="@string/age"
                android:textColor="#00154f"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtIntake" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/age"
                app:layout_constraintTop_toBottomOf="@+id/txtIntake">

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/radio_female" />

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:checked="true"
                    android:text="@string/radio_male" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/plan123"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="115dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtIntake">

                <RadioButton
                    android:id="@+id/radioPlan1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:checked="true"
                    android:text="@string/plan_1" />

                <RadioButton
                    android:id="@+id/radioPlan2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:checked="true"
                    android:text="@string/plan_2" />

                <RadioButton
                    android:id="@+id/radioPlan3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/plan_3" />
            </RadioGroup>

            <Button
                android:id="@+id/calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="120dp"
                android:background="@drawable/update_button"
                android:text="@string/Calculate"
                android:textColor="#f4af1b"
                app:backgroundTint="@null"
                app:layout_constraintStart_toEndOf="@+id/plan123"
                app:layout_constraintTop_toBottomOf="@+id/txtIntake"></Button>

            <TextView
                android:id="@+id/Calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plan123" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
