<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/red_bull_blue"
    tools:context=".Fragment2">

    <TextView
        android:id="@+id/txt_plan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:fontFamily="@font/archivo_black"
        android:text="@string/choose_your_plan"
        android:textAlignment="center"
        android:textColor="@color/Yellow"
        android:textSize="34sp" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardFullBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/Yellow"
        app:cardCornerRadius="18dp"
        app:cardElevation="12dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFullBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/full_body"
                android:textAlignment="center"
                android:textColor="@color/red_bull_blue"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/img_Full"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/squat_grande" />




        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/Yellow"
        app:cardCornerRadius="18dp"
        app:cardElevation="12dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtUL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/upper_lower"
                android:textAlignment="center"
                android:textColor="@color/red_bull_blue"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/img_UL"
                android:layout_width="200dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/deadlift" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPPL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/Yellow"
        app:cardCornerRadius="18dp"
        app:cardElevation="12dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtPPL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_pull_legs"
                android:textAlignment="center"
                android:textColor="@color/red_bull_blue"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/img_PPL"
                android:layout_width="198dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/bench" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
