<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ChoosePlan">

    <TextView
        android:id="@+id/txt_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adamina"
        android:text="@string/choose_your_plan"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardFullBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_plan">

        <TextView
            android:id="@+id/txt_description1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textColor="#000000"
            android:text="@string/this_program_is_for_people_who_want_to_train_3_times_per_week" />

        <TextView
            android:id="@+id/txtFullBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/full_body"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/img_Full"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/squat" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardFullBody">

        <TextView
            android:id="@+id/txt_description2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/this_program_is_for_people_who_want_to_train_5_times_per_week"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txtUL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/upper_lower"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/img_UL"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/squat" />

        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPPL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardUL">

        <TextView
            android:id="@+id/txt_description3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/this_program_is_for_people_who_want_to_train_5_times_per_week"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txtPPL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/upper_lower"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/img_PPL"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/squat" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>